--- a/money/wwwroot/css/site.scss
+++ b/money/wwwroot/css/site.scss
@@ -185,6 +185,10 @@ body {
     }
 }
 
+.sortable-rows tr {
+    cursor: move;
+}
+
 @media (min-width: 600px) {
     .container {
         width: 600px;
