--- a/money/wwwroot/css/site.css
+++ b/money/wwwroot/css/site.css
@@ -1,131 +1,113 @@
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-Regular.woff2") format("woff2"), url("../fonts/PublicSans-Regular.woff") format("woff"), url("../fonts/PublicSans-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-LightItalic.woff2") format("woff2"), url("../fonts/PublicSans-LightItalic.woff") format("woff"), url("../fonts/PublicSans-LightItalic.ttf") format("truetype");
     font-weight: 300;
     font-style: italic;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-ExtraLight.woff2") format("woff2"), url("../fonts/PublicSans-ExtraLight.woff") format("woff"), url("../fonts/PublicSans-ExtraLight.ttf") format("truetype");
     font-weight: 200;
     font-style: normal;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-BlackItalic.woff2") format("woff2"), url("../fonts/PublicSans-BlackItalic.woff") format("woff"), url("../fonts/PublicSans-BlackItalic.ttf") format("truetype");
     font-weight: 900;
     font-style: italic;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-SemiBold.woff2") format("woff2"), url("../fonts/PublicSans-SemiBold.woff") format("woff"), url("../fonts/PublicSans-SemiBold.ttf") format("truetype");
     font-weight: 600;
     font-style: normal;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-Thin.woff2") format("woff2"), url("../fonts/PublicSans-Thin.woff") format("woff"), url("../fonts/PublicSans-Thin.ttf") format("truetype");
     font-weight: 100;
     font-style: normal;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-SemiBoldItalic.woff2") format("woff2"), url("../fonts/PublicSans-SemiBoldItalic.woff") format("woff"), url("../fonts/PublicSans-SemiBoldItalic.ttf") format("truetype");
     font-weight: 600;
     font-style: italic;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-ExtraBold.woff2") format("woff2"), url("../fonts/PublicSans-ExtraBold.woff") format("woff"), url("../fonts/PublicSans-ExtraBold.ttf") format("truetype");
     font-weight: 800;
     font-style: normal;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-Bold.woff2") format("woff2"), url("../fonts/PublicSans-Bold.woff") format("woff"), url("../fonts/PublicSans-Bold.ttf") format("truetype");
     font-weight: bold;
     font-style: normal;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-Italic.woff2") format("woff2"), url("../fonts/PublicSans-Italic.woff") format("woff"), url("../fonts/PublicSans-Italic.ttf") format("truetype");
     font-weight: normal;
     font-style: italic;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-Black.woff2") format("woff2"), url("../fonts/PublicSans-Black.woff") format("woff"), url("../fonts/PublicSans-Black.ttf") format("truetype");
     font-weight: 900;
     font-style: normal;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-ExtraLightItalic.woff2") format("woff2"), url("../fonts/PublicSans-ExtraLightItalic.woff") format("woff"), url("../fonts/PublicSans-ExtraLightItalic.ttf") format("truetype");
     font-weight: 200;
     font-style: italic;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-Medium.woff2") format("woff2"), url("../fonts/PublicSans-Medium.woff") format("woff"), url("../fonts/PublicSans-Medium.ttf") format("truetype");
     font-weight: 500;
     font-style: normal;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-Light.woff2") format("woff2"), url("../fonts/PublicSans-Light.woff") format("woff"), url("../fonts/PublicSans-Light.ttf") format("truetype");
     font-weight: 300;
     font-style: normal;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-MediumItalic.woff2") format("woff2"), url("../fonts/PublicSans-MediumItalic.woff") format("woff"), url("../fonts/PublicSans-MediumItalic.ttf") format("truetype");
     font-weight: 500;
     font-style: italic;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-BoldItalic.woff2") format("woff2"), url("../fonts/PublicSans-BoldItalic.woff") format("woff"), url("../fonts/PublicSans-BoldItalic.ttf") format("truetype");
     font-weight: bold;
     font-style: italic;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-ThinItalic.woff2") format("woff2"), url("../fonts/PublicSans-ThinItalic.woff") format("woff"), url("../fonts/PublicSans-ThinItalic.ttf") format("truetype");
     font-weight: 100;
     font-style: italic;
 }
-
 @font-face {
-    font-family: 'Public Sans';
+    font-family: "Public Sans";
     src: url("../fonts/PublicSans-ExtraBoldItalic.woff2") format("woff2"), url("../fonts/PublicSans-ExtraBoldItalic.woff") format("woff"), url("../fonts/PublicSans-ExtraBoldItalic.ttf") format("truetype");
     font-weight: 800;
     font-style: italic;
 }
-
 body {
-    font-family: 'Public Sans', Arial, sans-serif;
+    font-family: "Public Sans", Arial, sans-serif;
     font-weight: 500;
 }
 
@@ -143,7 +125,6 @@ body {
     margin-bottom: 10px;
     border-bottom: solid 1px #e0e0e0;
 }
-
 .account .row {
     padding-top: 5px;
     padding-bottom: 5px;
@@ -175,7 +156,6 @@ body {
     height: auto;
     margin-right: 20px;
 }
-
 .progress .overlay {
     position: absolute;
     top: 0;
@@ -183,11 +163,9 @@ body {
     right: 0;
     bottom: 0;
 }
-
 .progress .overlay div {
     padding: 14px;
 }
-
 .progress .overlay :last-child {
     text-align: right;
 }
@@ -204,7 +182,6 @@ body {
 .dormant {
     background-color: #f3f9ff !important;
 }
-
 .dormant .btn-primary {
     opacity: 0.6 !important;
 }
@@ -226,8 +203,8 @@ body {
 }
 
 .table-sm td, .table-sm th {
-    padding-left: .75rem;
-    padding-right: .75rem;
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
 }
 
 #net-worth h1 {
@@ -284,7 +261,6 @@ body {
     padding-top: 4px;
     font-size: 0.8em;
 }
-
 .entry-modal-type-info > span {
     margin-left: 5px;
 }
@@ -292,11 +268,9 @@ body {
 .drag-ghost {
     background-color: #feff81 !important;
 }
-
 .drag-ghost td {
     border-color: #424242 !important;
 }
-
 .drag-ghost + tr td {
     border-color: #424242 !important;
 }
