--- a/money/Views/Accounts/Index.cshtml
+++ b/money/Views/Accounts/Index.cshtml
@@ -14,6 +14,7 @@
                     <th class="text-center">Net Worth</th>
                     <th class="text-right"><span class="sr-only">Edit</span></th>
                     <th class="text-right"><span class="sr-only">Budgets</span></th>
+                    <th class="text-right"><span class="sr-only">Order</span></th>
                 </tr>
             </thead>
             @foreach (var typeGroup in Model.Accounts.GroupBy(a => a.Type).OrderBy(a => a.Key))
@@ -31,6 +32,7 @@
                             <td class="text-center align-middle">@(account.IsIncludedInNetWorth ? "Yes" : "No")</td>
                             <td class="text-right"><a asp-action="Update" asp-route-id="@account.ID" class="btn btn-primary btn-sm">Edit</a></td>
                             <td class="text-right"><a asp-action="Index" asp-controller="MonthlyBudgets" asp-route-id="@account.ID" class="btn btn-primary btn-sm">Budgets</a></td>
+                            <td class="text-right drag-control"><span class="drag-handle btn btn-link"><i class="fa fa-arrows"></i></span></td>
                         </tr>
                     }
                 </tbody>
