--- a/money/Views/Home/Index.cshtml
+++ b/money/Views/Home/Index.cshtml
@@ -21,22 +21,20 @@
 }
 
 <!-- Add Entry Modal -->
-<div class="modal fade" id="add-entry-modal" tabindex="-1" role="dialog" aria-labelledby="add-entry-modal-label">
-    <div class="modal-dialog modal-lg" role="document">
+<div class="modal" id="add-entry-modal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="add-entry-modal-label">New Entry</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <h5 class="modal-title">New Entry</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <!-- Content -->
             </div>
-            <div class="modal-footer d-flex align-items-center">
+            <div class="modal-footer">
                 <div class="spinner-border spinner-border-sm spinner-border-hidden" role="status" aria-hidden="true"></div>
-                <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary">Add</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Add</button>
             </div>
         </div>
     </div>
