--- a/money/Views/Categories/Index.cshtml
+++ b/money/Views/Categories/Index.cshtml
@@ -8,23 +8,17 @@
     <div class="col">
         <h1>Categories</h1>
         <p><a asp-action="Index" asp-route-showDeleted="true">Show Deleted</a></p>
-        <table class="table table-striped">
-            <thead class="thead-light">
-                <tr>
-                    <th>Name</th>
-                    <th class="text-right"><span class="sr-only">Edit</span></th>
-                    <th class="text-right"><span class="sr-only">Order</span></th>
-                </tr>
-            </thead>
-            @foreach (var accountGroup in Model.Categories)
-            {
-                var (accountID, accountName) = accountGroup.Key;
 
-                <thead class="thead-dark">
+        @foreach (var accountGroup in Model.Categories)
+        {
+            var (accountID, accountName) = accountGroup.Key;
+
+            <table class="table table-striped  table-borderless">
+                <thead class="table-dark">
                     <tr>
                         <th class="align-middle">@accountName</th>
-                        <th class="text-right"><a asp-action="Create" asp-route-id="@accountID" class="btn btn-primary btn-sm">Add</a></th>
-                        <th class="text-right">&nbsp;</th>
+                        <th class="text-end"><a asp-action="Create" asp-route-id="@accountID" class="btn btn-primary btn-sm">Add</a></th>
+                        <th class="text-end">&nbsp;</th>
                     </tr>
                 </thead>
                 <tbody class="sortable-rows" data-persist-url="@Url.Action("UpdateDisplayOrder", "Categories")">
@@ -32,13 +26,14 @@
                     {
                         <tr data-id="@category.ID">
                             <td class="align-middle">@category.NameWithDeletedStatus()</td>
-                            <td class="text-right"><a asp-action="Update" asp-route-id="@category.ID" class="btn btn-primary btn-sm">Edit</a></td>
-                            <td class="text-right drag-control"><span class="drag-handle btn btn-link"><i class="fa fa-arrows"></i></span></td>
+                            <td class="align-middle text-end"><a asp-action="Update" asp-route-id="@category.ID" class="btn btn-primary btn-sm">Edit</a></td>
+                            <td class="align-middle text-end drag-control"><span class="drag-handle"><i class="bi bi-arrows-move"></i></span></td>
                         </tr>
                     }
                 </tbody>
-            }
-        </table>
+            </table>
+        }
+
         <p><a asp-action="Create" class="btn btn-primary btn-new">Add New Category</a></p>
     </div>
 </div>
