--- a/money/Views/Accounts/Index.cshtml
+++ b/money/Views/Accounts/Index.cshtml
@@ -7,18 +7,11 @@
 <div class="row">
     <div class="col">
         <h1>Accounts</h1>
-        <table class="table table-striped">
-            <thead class="thead-light">
-                <tr>
-                    <th>Name</th>
-                    <th class="text-right"><span class="sr-only">Edit</span></th>
-                    <th class="text-right"><span class="sr-only">Budgets</span></th>
-                    <th class="text-right"><span class="sr-only">Order</span></th>
-                </tr>
-            </thead>
-            @foreach (var typeGroup in Model.Accounts.GroupBy(a => a.Type).OrderBy(a => a.Key))
-            {
-                <thead class="thead-dark">
+
+        @foreach (var typeGroup in Model.Accounts.GroupBy(a => a.Type).OrderBy(a => a.Key))
+        {
+            <table class="table table-striped table-borderless">
+                <thead class="table-dark">
                     <tr>
                         <th colspan="4">@typeGroup.Key.GetDisplayName()</th>
                     </tr>
@@ -28,14 +21,15 @@
                     {
                         <tr class="@(account.IsDormant ? "dormant text-muted" : "")" data-id="@account.ID">
                             <td class="align-middle">@account.NameWithDeletedStatus() @(account.IsDormant ? "[Dormant]" : "")</td>
-                            <td class="text-right"><a asp-action="Update" asp-route-id="@account.ID" class="btn btn-primary btn-sm">Edit</a></td>
-                            <td class="text-right"><a asp-action="Index" asp-controller="MonthlyBudgets" asp-route-id="@account.ID" class="btn btn-primary btn-sm">Budgets</a></td>
-                            <td class="text-right drag-control"><span class="drag-handle btn btn-link"><i class="fa fa-arrows"></i></span></td>
+                            <td class="align-middle text-end"><a asp-action="Update" asp-route-id="@account.ID" class="btn btn-primary btn-sm">Edit</a></td>
+                            <td class="align-middle text-end"><a asp-action="Index" asp-controller="MonthlyBudgets" asp-route-id="@account.ID" class="btn btn-primary btn-sm">Budgets</a></td>
+                            <td class="align-middle text-end drag-control"><span class="drag-handle"><i class="bi bi-arrows-move"></i></span></td>
                         </tr>
                     }
                 </tbody>
-            }
-        </table>
+            </table>
+        }
+
         <p><a asp-action="Create" class="btn btn-primary btn-new">Add New Account</a></p>
     </div>
 </div>
