--- a/money/wwwroot/css/site.css
+++ b/money/wwwroot/css/site.css
@@ -106,20 +106,6 @@
     font-weight: 800;
     font-style: italic;
 }
-body {
-    font-family: "Public Sans", Arial, sans-serif;
-    font-weight: 500;
-}
-
-.body-content {
-    padding-top: 20px;
-    padding-bottom: 30px;
-}
-
-.form-group-nolabel {
-    padding-top: 32px;
-}
-
 .account {
     padding-bottom: 10px;
     margin-bottom: 10px;
@@ -128,6 +114,11 @@ body {
 .account .row {
     padding-top: 5px;
     padding-bottom: 5px;
+}
+.account .btn.btn-add-entry {
+    padding: 0;
+    width: 38px;
+    height: 38px;
 }
 
 .account-type {
@@ -155,6 +146,7 @@ body {
     font-size: 1rem;
     height: auto;
     margin-right: 20px;
+    height: 38px;
 }
 .progress .overlay {
     position: absolute;
@@ -162,9 +154,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-}
-.progress .overlay div {
-    padding: 14px;
+    padding: 0 14px;
 }
 .progress .overlay :last-child {
     text-align: right;
@@ -184,6 +174,20 @@ body {
 }
 .dormant .btn-primary {
     opacity: 0.6 !important;
+}
+
+body {
+    font-family: "Public Sans", Arial, sans-serif;
+    font-weight: 500;
+}
+
+.body-content {
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
+.form-group-nolabel {
+    padding-top: 32px;
 }
 
 .btn-submit, .btn-new {
@@ -275,17 +279,13 @@ body {
     border-color: #424242 !important;
 }
 
+.sortable-rows td:first-child {
+    width: 100%;
+}
 .sortable-rows .drag-handle {
     cursor: move;
     display: block;
-    padding: 0.25rem 0.5rem;
-    font-size: 0.875rem;
-    line-height: 1.5;
-    border-radius: 0.2rem;
-}
-
-.drag-control {
-    width: 10px;
+    padding: 3px 5px;
 }
 
 @media (min-width: 600px) {
