--- a/money/Views/Entries/Update.cshtml
+++ b/money/Views/Entries/Update.cshtml
@@ -9,30 +9,30 @@
         <h1>Update Entry</h1>
         <form asp-controller="Entries" asp-action="Update" method="post">
             <div class="form-row">
-                <div class="form-group col-5">
-                    <label asp-for="Amount">Amount</label>
+                <div class="mb-2 col-5">
+                    <label asp-for="Amount" class="form-label">Amount</label>
                     <editor for="Amount" />
                     <span asp-validation-for="Amount"></span>
                 </div>
             </div>
             <div class="form-row">
-                <div class="form-group col-7">
-                    <label asp-for="Date">Date</label>
+                <div class="mb-2 col-7">
+                    <label asp-for="Date" class="form-label">Date</label>
                     <editor for="Date" />
                     <span asp-validation-for="Date"></span>
                 </div>
-                <div class="form-group-nolabel col-5">
+                <div class="mb-2-nolabel col-5">
                     <button class="btn btn-light btn-block btn-date-preset" data-date="@DateTime.Now.Date.AddDays(-1).ToString("yyyy-MM-dd")">Yesterday</button>
                 </div>
             </div>
-            <div class="form-group">
-                <label asp-for="CategoryID">Category</label>
+            <div class="mb-2">
+                <label asp-for="CategoryID" class="form-label">Category</label>
                 <select asp-for="CategoryID" asp-items="Model.Categories" class="form-control">
                     <option value="">--</option>
                 </select>
             </div>
-            <div class="form-group">
-                <label asp-for="PartyID">Party</label>
+            <div class="mb-2">
+                <label asp-for="PartyID" class="form-label">Party</label>
                 <select asp-for="PartyID" asp-items="Model.Parties" class="form-control">
                     <option value="">--</option>
                 </select>
