--- a/money/Views/Parties/Update.cshtml
+++ b/money/Views/Parties/Update.cshtml
@@ -8,8 +8,8 @@
     <div class="col">
         <h1>Update Party</h1>
         <form asp-controller="Parties" asp-action="Update" method="post">
-            <div class="form-group">
-                <label asp-for="Name">Name</label>
+            <div class="mb-4">
+                <label asp-for="Name" class="form-label">Name</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name"></span>
             </div>
