--- a/money/Views/Users/Login.cshtml
+++ b/money/Views/Users/Login.cshtml
@@ -7,16 +7,16 @@
 <div class="row">
     <div class="col">
         <h1>Log In</h1>
-        <form asp-controller="Users" asp-action="Login" method="post" class="needs-validation" novalidate>
+        <form asp-controller="Users" asp-action="Login" method="post">
             <div class="mb-2">
                 <label asp-for="Email" class="form-label">Email Address</label>
                 <input asp-for="Email" class="form-control" required>
-                <div class="invalid-feedback">Please enter an email address</div>
+                <span asp-validation-for="Email"></span>
             </div>
             <div class="mb-4">
                 <label asp-for="Password" class="form-label">Password</label>
                 <input asp-for="Password" class="form-control" required>
-                <div class="invalid-feedback">Please enter a password</div>
+                <span asp-validation-for="Password"></span>
             </div>
             <button type="submit" class="btn btn-primary">Log In</button>
         </form>
