--- a/money/Views/Shared/_Layout.cshtml
+++ b/money/Views/Shared/_Layout.cshtml
@@ -24,10 +24,10 @@
         <div class="container">
             <a class="navbar-brand" asp-controller="Home" asp-action="Index">Money</a>
             <div class="spinner-border spinner-border-sm text-light spinner-border-hidden" role="status" aria-hidden="true"></div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-end" id="main-nav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Accounts" asp-action="Index">Accounts</a>
