--- a/money/wwwroot/css/_account.scss
+++ b/money/wwwroot/css/_account.scss
@@ -30,6 +30,10 @@
     font-size: 1rem;
     font-weight: bold;
     margin: 0;
+
+    a {
+        text-decoration: none;
+    }
 }
 
 .account-balance {
