--- a/money/wwwroot/css/site.css
+++ b/money/wwwroot/css/site.css
@@ -163,13 +163,16 @@
     text-align: right;
 }
 
-.progress-bar {
-    transition: background-color 3s cubic-bezier(0.91, 0.065, 0.95, 0.54);
+.progress-bar.bg-success {
+    background-color: #28a745 !important;
 }
 
-.updated {
-    transition: background-color 0 cubic-bezier(0.91, 0.065, 0.95, 0.54);
-    background-color: #ff6a00;
+.progress-bar.bg-danger {
+    background-color: #dc3545 !important;
+}
+
+.progress-bar.updated {
+    background-color: #ff6a00 !important;
 }
 
 .dormant {
