--- a/money/Views/Users/Login.cshtml
+++ b/money/Views/Users/Login.cshtml
@@ -8,14 +8,14 @@
     <div class="col">
         <h1>Log In</h1>
         <form asp-controller="Users" asp-action="Login" method="post">
-            <div class="form-group">
-                <label asp-for="Email">Email Address</label>
-                <input asp-for="Email" class="form-control" />
+            <div class="mb-2">
+                <label asp-for="Email" class="form-label">Email Address</label>
+                <input asp-for="Email" class="form-control" required>
                 <span asp-validation-for="Email"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Password">Password</label>
-                <input asp-for="Password" class="form-control" />
+            <div class="mb-4">
+                <label asp-for="Password" class="form-label">Password</label>
+                <input asp-for="Password" class="form-control" required>
                 <span asp-validation-for="Password"></span>
             </div>
             <button type="submit" class="btn btn-primary">Log In</button>
